feat: add a caching layer
